# bundol

./: README.md  index.html  package.json  pnpm-lock.yaml  unocss.config.ts  vite.config.ts
.github/workflows/: publish.yml  testing.yml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: TitleBar.tsx
src/routes/: App.tsx  Updater.tsx
src/updater/: updater.ts
util/: lcu-events.json  lcu-help.json  perks-styles.json  perks.json
