[package]
name = "bundol"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-show", "window-start-dragging", "window-hide", "window-maximize", "window-close", "window-minimize", "window-unmaximize", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
tungstenite = { version = "0.20.0", features = ["native-tls"] }
base64 = "0.21.2"
rand = "0.8.5"
native-tls = "0.2.11"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
futures-util = "0.3.28"
log = "0.4.20"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
